--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="..." />
     <meta name="description" content="..." />
     <link rel="author" href="humans.txt" />
-    <title>NAME</title>
+    <title>Leasing From D&M</title>
 
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
