--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,16 @@
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
+    <div class="wrapper">
+      <header class="header">
+        <div class="container">
+          <div class="header__inner"></div>
+        </div>
+      </header>
+      <main class="main"></main>
+      <footer class="footer"></footer>
+    </div>
+
     <script src="js/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
