--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- keywords -->
     <meta name="keywords" content="..." />
+    <!-- description -->
     <meta name="description" content="..." />
+    <!-- favicon -->
+    <!-- humans -->
     <link rel="author" href="humans.txt" />
     <title>Leasing From D&M</title>
 
@@ -13,9 +17,32 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="header">
+      <header class="header header--main">
         <div class="container">
-          <div class="header__inner"></div>
+          <div class="header__inner">
+            <a class="logo" href="#"
+              ><img class="logo__img" src="images/icon/logo.svg" alt="logo"
+            /></a>
+            <nav class="menu">
+              <ul class="menu__items">
+                <li class="menu__item">
+                  <a class="menu__link" href="#">NEW CARS</a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link" href="#">PRE-OWNED CARS</a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link" href="#">FINANCE</a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link" href="#">LEASE VS BUY</a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link" href="#">CONTACT US</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
       </header>
       <main class="main"></main>
