--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- keywords -->
-    <meta name="keywords" content="..." />
-    <!-- description -->
-    <meta name="description" content="..." />
-    <!-- favicon -->
+    <meta name="keywords" content="Leasing, car, cars, leasing car, d&m" />
+    <meta
+      name="description"
+      content="TrueCar Certified Dealers compete for your business by providing discounted pricing on in-stock inventory."
+    />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
     <!-- humans -->
     <link rel="author" href="humans.txt" />
     <title>Leasing From D&M</title>
@@ -46,7 +47,104 @@
         </div>
       </header>
       <main class="main"></main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="container">
+          <nav class="footer__menu">
+            <ul class="footer__menu-list">
+              <li class="footer__menu-item">
+                <h4 class="footer__menu-title">Products</h4>
+              </li>
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">Used</a>
+              </li>
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">New</a>
+              </li>
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">Sell your car</a>
+              </li>
+            </ul>
+            <ul class="footer__menu-list">
+              <li class="footer__menu-item">
+                <h4 class="footer__menu-title">Resources</h4>
+              </li>
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">Blog</a>
+              </li>
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">FAQ</a>
+              </li>
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">Contact us</a>
+              </li>
+            </ul>
+            <ul class="footer__menu-list">
+              <li class="footer__menu-item">
+                <h4 class="footer__menu-title">Work With TrueCar</h4>
+              </li>
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">Dealers</a>
+              </li>
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">Partners</a>
+              </li>
+            </ul>
+            <ul class="footer__menu-list">
+              <li class="footer__menu-item">
+                <h4 class="footer__menu-title">About</h4>
+              </li>
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">About us</a>
+              </li>
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">Team</a>
+              </li>
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="#">Careers</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="footer__app-box">
+            <a class="footer__app-link" href="#"
+              ><img
+                class="footer__app-img"
+                src="images/icon/app.svg"
+                alt="AppStore"
+            /></a>
+            <a class="footer__app-link" href="#"
+              ><img
+                class="footer__app-img"
+                src="images/icon/google.svg"
+                alt="GooglePlay"
+            /></a>
+          </div>
+          <div class="footer__info-box">
+            <p class="footer__info-text">
+              For questions about the TrueCar Auto Buying Service please call
+              <a class="footer__info-phone" href="tel:+79876543201"
+                >+7-987-654-32-01</a
+              >. <br />
+              Certified Dealers are contractually obligated by TrueCar to meet
+              certain customer service requirements and complete the TrueCar
+              Dealer Certification Program.
+            </p>
+            <p class="footer__info-text">
+              TrueCar does not broker, sell, or lease motor vehicles. Unless
+              otherwise noted, all vehicles shown on this website are offered
+              for sale by licensed motor vehicle dealers. All vehicles are
+              subject to prior sale. By accessing this website, you agree to the
+              TrueCar Terms of Service and Privacy Policy.
+            </p>
+          </div>
+          <div class="footer__policy-box">
+            <a class="footer__policy-link" href="#">Terms of Service</a
+            ><a class="footer__policy-link" href="#">Privacy Policy</a
+            ><a class="footer__policy-link" href="#"
+              >Do Not Sell My Personal Information</a
+            >
+          </div>
+        </div>
+      </footer>
     </div>
 
     <script src="js/jquery.min.js"></script>
