--- a/app/newcars.html
+++ b/app/newcars.html
@@ -45,37 +45,7 @@
           </div>
         </div>
       </header>
-      <main class="main">
-        <section class="top">
-          <div class="container">
-            <h1 class="title title__h1 top__title">Leasing From D&M</h1>
-            <a class="top__btn" href="#">find a car</a>
-          </div>
-        </section>
-        <div class="slider">
-          <div class="swiper">
-            <div class="swiper-wrapper slider__box">
-              <div
-                class="swiper-slide slider__img"
-                style="background-image: url(images/bg/bg01.jpg)"
-              ></div>
-              <div
-                class="swiper-slide slider__img"
-                style="background-image: url(images/bg/bg02.jpg)"
-              ></div>
-              <div
-                class="swiper-slide slider__img"
-                style="background-image: url(images/bg/bg01.jpg)"
-              ></div>
-              <div
-                class="swiper-slide slider__img"
-                style="background-image: url(images/bg/bg02.jpg)"
-              ></div>
-            </div>
-            <div class="swiper-pagination"></div>
-          </div>
-        </div>
-      </main>
+      <main class="main"></main>
       <footer class="footer">
         <div class="container">
           <nav class="footer__menu">
@@ -175,7 +145,7 @@
         </div>
       </footer>
     </div>
-    <script src="js/swiper-bundle.min.js"></script>
+
     <script src="js/main.min.js"></script>
   </body>
 </html>
