section and svg

--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,110 @@
             <div class="swiper-pagination"></div>
           </div>
         </div>
+        <section class="why">
+          <div class="container">
+            <h2 class="title title__h2 why__title-section">
+              Why Lease with D&M?
+            </h2>
+            <div class="why__box">
+              <div class="why__item">
+                <img
+                  class="why__img"
+                  src="images/icon/car.svg"
+                  alt="Top Dealers"
+                />
+                <p class="why__title">Top Dealers</p>
+                <p class="why__text">
+                  TrueCar Certified Dealers compete for your business by
+                  providing discounted pricing on in-stock inventory.
+                </p>
+              </div>
+              <div class="why__item">
+                <img
+                  class="why__img"
+                  src="images/icon/price.svg"
+                  alt="Discounted Pricing"
+                />
+                <p class="why__title">Discounted Pricing</p>
+                <p class="why__text">
+                  View local inventory from the comfort of home and get access
+                  to guaranteed savings on the car of your choice.
+                </p>
+              </div>
+              <div class="why__item">
+                <img
+                  class="why__img"
+                  src="images/icon/payment.svg"
+                  alt="Lower Payments"
+                />
+                <p class="why__title">Lower Payments</p>
+                <p class="why__text">
+                  Get discounted pricing when you shop for a car or truck using
+                  TrueCar and save on your lease payment.
+                </p>
+              </div>
+              <div class="why__item">
+                <img
+                  class="why__img"
+                  src="images/icon/easytop.svg"
+                  alt="Easy Upgrade"
+                />
+                <p class="why__title">Easy Upgrade</p>
+                <p class="why__text">
+                  Easy to upgrade to the newest vehicle model every few years if
+                  you would like to be modern and comfortable
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="how">
+          <div class="container">
+            <h2 class="title title__h2 how__title-section">
+              How Does Leasing Work?
+            </h2>
+            <p class="how__text">
+              Leasing a vehicle is essentially entering into a long term rental
+              agreement for that vehicle. Unlike a traditional car purchase, you
+              don’t actually own the vehicle. Instead, a leasing company
+              purchases the vehicle from the dealer on your behalf and then you
+              make monthly payments to the leasing company for the duration of
+              your lease. Some leases however, do provide the option to purchase
+              the vehicle at the end of the lease.
+            </p>
+            <div class="how__box">
+              <p class="how__title">
+                Similar to a short term car rental, there are rules that define:
+              </p>
+              <div class="how__item">
+                <img class="how__img" src="images/icon/one.svg" alt="One" />
+                <p class="how__text">
+                  How much you can drive, stated as annual miles (excess miles
+                  are charged at a specified rate)
+                </p>
+              </div>
+              <div class="how__item">
+                <img class="how__img" src="images/icon/two.svg" alt="Two" />
+                <p class="how__text">
+                  Types of damage that you may be liable for at the end of your
+                  lease
+                </p>
+              </div>
+              <div class="how__item">
+                <img class="how__img" src="images/icon/three.svg" alt="One" />
+                <p class="how__text">
+                  The procedures and costs when you return the vehicle at the
+                  end of your lease
+                </p>
+              </div>
+            </div>
+            <p class="how__text">
+              Lease contracts are a commitment and ending them early can be
+              difficult and expensive so it is important to consider your
+              circumstances carefully before you decide.
+            </p>
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <div class="container">
