--- a/app/index.html
+++ b/app/index.html
@@ -152,21 +152,21 @@
               </p>
               <div class="how__item">
                 <img class="how__img" src="images/icon/one.svg" alt="One" />
-                <p class="how__text">
+                <p class="how__text-info">
                   How much you can drive, stated as annual miles (excess miles
                   are charged at a specified rate)
                 </p>
               </div>
               <div class="how__item">
                 <img class="how__img" src="images/icon/two.svg" alt="Two" />
-                <p class="how__text">
+                <p class="how__text-info">
                   Types of damage that you may be liable for at the end of your
                   lease
                 </p>
               </div>
               <div class="how__item">
                 <img class="how__img" src="images/icon/three.svg" alt="One" />
-                <p class="how__text">
+                <p class="how__text-info">
                   The procedures and costs when you return the vehicle at the
                   end of your lease
                 </p>
