index.html done

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
             <nav class="menu">
               <ul class="menu__items">
                 <li class="menu__item">
-                  <a class="menu__link" href="#">NEW CARS</a>
+                  <a class="menu__link" href="newcars.html">NEW CARS</a>
                 </li>
                 <li class="menu__item">
                   <a class="menu__link" href="#">PRE-OWNED CARS</a>
@@ -38,7 +38,7 @@
                   <a class="menu__link" href="#">LEASE VS BUY</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="#">CONTACT US</a>
+                  <a class="menu__link" href="contacts.html">CONTACT US</a>
                 </li>
               </ul>
             </nav>
@@ -177,6 +177,83 @@
               difficult and expensive so it is important to consider your
               circumstances carefully before you decide.
             </p>
+          </div>
+        </section>
+        <section class="video">
+          <div class="container">
+            <h2 class="title title__h2 video__title-section">
+              WELCOME TO D&M LEASING
+            </h2>
+            <p class="video__sub-title">
+              Find out how easy it is to lease from D&M
+            </p>
+            <iframe
+              class="video__content"
+              width="1000"
+              height="500"
+              src="https://www.youtube.com/embed/mYwK4o-KuKI?controls=0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </section>
+        <section class="important">
+          <div class="container">
+            <h2 class="title title__h2 important__title-section">
+              Important Things to Consider
+            </h2>
+            <p class="important__text">
+              Depending on your circumstances and what is important to you, a
+              lease could be a great option for your next vehicle. Below are
+              some important factors that may influence your decision.
+            </p>
+            <ul class="important__list">
+              <li class="important__item">
+                <img
+                  class="important__img"
+                  src="images/content/info01.jpg"
+                  alt="Important"
+                />
+                <p class="important__item-text">
+                  Monthly payments on leases are generally 20% - 30% cheaper
+                  than loans
+                </p>
+              </li>
+              <li class="important__item">
+                <img
+                  class="important__img"
+                  src="images/content/info02.jpg"
+                  alt="Important"
+                />
+                <p class="important__item-text">
+                  You may be eligible for a tax break if you use the leased
+                  vehicle for business purposes
+                </p>
+              </li>
+              <li class="important__item">
+                <img
+                  class="important__img"
+                  src="images/content/info03.jpg"
+                  alt="Important"
+                />
+                <p class="important__item-text">
+                  Easy to upgrade to the newest vehicle model every few years
+                </p>
+              </li>
+              <li class="important__item">
+                <img
+                  class="important__img"
+                  src="images/content/info04.jpg"
+                  alt="Important"
+                />
+                <p class="important__item-text">
+                  There are often fees charged if you drive more than your
+                  lease's mileage allowance
+                </p>
+              </li>
+            </ul>
           </div>
         </section>
       </main>
