--- a/app/contacts.html
+++ b/app/contacts.html
@@ -17,16 +17,16 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="header header--main">
+      <header class="header">
         <div class="container">
           <div class="header__inner">
-            <a class="logo" href="#"
+            <a class="logo" href="index.html"
               ><img class="logo__img" src="images/icon/logo.svg" alt="logo"
             /></a>
             <nav class="menu">
               <ul class="menu__items">
                 <li class="menu__item">
-                  <a class="menu__link" href="#">NEW CARS</a>
+                  <a class="menu__link" href="newcars.html">NEW CARS</a>
                 </li>
                 <li class="menu__item">
                   <a class="menu__link" href="#">PRE-OWNED CARS</a>
@@ -38,20 +38,35 @@
                   <a class="menu__link" href="#">LEASE VS BUY</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="#">CONTACT US</a>
+                  <a class="menu__link" href="contacts.html">CONTACT US</a>
                 </li>
               </ul>
             </nav>
           </div>
         </div>
       </header>
-      <main class="main"></main>
+      <main class="main">
+        <section class="contacts">
+          <div class="container">
+            <h2 class="title title__h2 contacts__title">Contact Us</h2>
+            <p class="contacts__subtitle subtitle">
+              Feel free to contact us with questions, potencial partnerships or
+              media inquiries
+            </p>
+            <form
+              class="contact__form"
+              action="
+            "
+            ></form>
+          </div>
+        </section>
+      </main>
       <footer class="footer">
         <div class="container">
           <nav class="footer__menu">
             <ul class="footer__menu-list">
               <li class="footer__menu-item">
-                <h4 class="footer__menu-title">Products</h4>
+                <h4 class="footer__menu-title title title__h4">Products</h4>
               </li>
               <li class="footer__menu-item">
                 <a class="footer__menu-link" href="#">Used</a>
@@ -65,7 +80,7 @@
             </ul>
             <ul class="footer__menu-list">
               <li class="footer__menu-item">
-                <h4 class="footer__menu-title">Resources</h4>
+                <h4 class="footer__menu-title title title__h4">Resources</h4>
               </li>
               <li class="footer__menu-item">
                 <a class="footer__menu-link" href="#">Blog</a>
@@ -79,7 +94,9 @@
             </ul>
             <ul class="footer__menu-list">
               <li class="footer__menu-item">
-                <h4 class="footer__menu-title">Work With TrueCar</h4>
+                <h4 class="footer__menu-title title title__h4">
+                  Work With TrueCar
+                </h4>
               </li>
               <li class="footer__menu-item">
                 <a class="footer__menu-link" href="#">Dealers</a>
@@ -90,7 +107,7 @@
             </ul>
             <ul class="footer__menu-list">
               <li class="footer__menu-item">
-                <h4 class="footer__menu-title">About</h4>
+                <h4 class="footer__menu-title title title__h4">About</h4>
               </li>
               <li class="footer__menu-item">
                 <a class="footer__menu-link" href="#">About us</a>
