--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
       <header class="header header--main">
         <div class="container">
           <div class="header__inner">
-            <a class="logo" href="#"
+            <a class="logo" href="index.html"
               ><img class="logo__img" src="images/icon/logo.svg" alt="logo"
             /></a>
             <nav class="menu">
@@ -87,7 +87,7 @@
                   src="images/icon/car.svg"
                   alt="Top Dealers"
                 />
-                <p class="why__title">Top Dealers</p>
+                <p class="why__subtitle subtitle">Top Dealers</p>
                 <p class="why__text">
                   TrueCar Certified Dealers compete for your business by
                   providing discounted pricing on in-stock inventory.
@@ -99,7 +99,7 @@
                   src="images/icon/price.svg"
                   alt="Discounted Pricing"
                 />
-                <p class="why__title">Discounted Pricing</p>
+                <p class="why__subtitle subtitle">Discounted Pricing</p>
                 <p class="why__text">
                   View local inventory from the comfort of home and get access
                   to guaranteed savings on the car of your choice.
@@ -111,7 +111,7 @@
                   src="images/icon/payment.svg"
                   alt="Lower Payments"
                 />
-                <p class="why__title">Lower Payments</p>
+                <p class="why__subtitle subtitle">Lower Payments</p>
                 <p class="why__text">
                   Get discounted pricing when you shop for a car or truck using
                   TrueCar and save on your lease payment.
@@ -147,7 +147,7 @@
               the vehicle at the end of the lease.
             </p>
             <div class="how__box">
-              <p class="how__title">
+              <p class="how__subtitle subtitle">
                 Similar to a short term car rental, there are rules that define:
               </p>
               <div class="how__item">
@@ -184,7 +184,7 @@
             <h2 class="title title__h2 video__title-section">
               WELCOME TO D&M LEASING
             </h2>
-            <p class="video__sub-title">
+            <p class="video__subtitle subtitle">
               Find out how easy it is to lease from D&M
             </p>
             <iframe
@@ -262,7 +262,7 @@
           <nav class="footer__menu">
             <ul class="footer__menu-list">
               <li class="footer__menu-item">
-                <h4 class="footer__menu-title">Products</h4>
+                <h4 class="footer__menu-title title title__h4">Products</h4>
               </li>
               <li class="footer__menu-item">
                 <a class="footer__menu-link" href="#">Used</a>
@@ -276,7 +276,7 @@
             </ul>
             <ul class="footer__menu-list">
               <li class="footer__menu-item">
-                <h4 class="footer__menu-title">Resources</h4>
+                <h4 class="footer__menu-title title title__h4">Resources</h4>
               </li>
               <li class="footer__menu-item">
                 <a class="footer__menu-link" href="#">Blog</a>
@@ -290,7 +290,9 @@
             </ul>
             <ul class="footer__menu-list">
               <li class="footer__menu-item">
-                <h4 class="footer__menu-title">Work With TrueCar</h4>
+                <h4 class="footer__menu-title title title__h4">
+                  Work With TrueCar
+                </h4>
               </li>
               <li class="footer__menu-item">
                 <a class="footer__menu-link" href="#">Dealers</a>
@@ -301,7 +303,7 @@
             </ul>
             <ul class="footer__menu-list">
               <li class="footer__menu-item">
-                <h4 class="footer__menu-title">About</h4>
+                <h4 class="footer__menu-title title title__h4">About</h4>
               </li>
               <li class="footer__menu-item">
                 <a class="footer__menu-link" href="#">About us</a>
