--- a/app/contacts.html
+++ b/app/contacts.html
@@ -53,11 +53,15 @@
               Feel free to contact us with questions, potencial partnerships or
               media inquiries
             </p>
-            <form
-              class="contact__form"
-              action="
-            "
-            ></form>
+            <form class="contacts__form form" action="#">
+              <input class="form__input" type="text" placeholder="Name" />
+              <input class="form__input" type="email" placeholder="E-mail" />
+              <textarea
+                class="form__textarea"
+                placeholder="Your text"
+              ></textarea>
+              <button class="form__btn" type="submit">SUBMIT</button>
+            </form>
           </div>
         </section>
       </main>
