--- a/app/contacts.html
+++ b/app/contacts.html
@@ -64,6 +64,35 @@
             </form>
           </div>
         </section>
+        <section class="blog">
+          <div class="container">
+            <div class="blog__box">
+              <div class="blog__item">
+                <img
+                  class="blog__img"
+                  src="images/content/news01.jpg"
+                  alt="Toytota"
+                />
+                <h4 class="title title__h4 blog__title">
+                  An easier way to buy your next Toyota
+                </h4>
+                <a class="blog__item-link" href="#">more</a>
+              </div>
+              <div class="blog__item">
+                <img
+                  class="blog__img"
+                  src="images/content/news02.jpg"
+                  alt="Road-Tripping"
+                />
+                <h4 class="title title__h4 blog__title">
+                  A Guide to Road-Tripping With Pets
+                </h4>
+                <a class="blog__item-link" href="#">more</a>
+              </div>
+            </div>
+            <a class="blog__link" href="#">Show more</a>
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <div class="container">
