--- a/app/contacts.html
+++ b/app/contacts.html
@@ -38,7 +38,9 @@
                   <a class="menu__link" href="#">LEASE VS BUY</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="contacts.html">CONTACT US</a>
+                  <a class="menu__link menu__link--active" href="contacts.html"
+                    >CONTACT US</a
+                  >
                 </li>
               </ul>
             </nav>
@@ -90,7 +92,7 @@
                 <a class="blog__item-link" href="#">more</a>
               </div>
             </div>
-            <a class="blog__link" href="#">Show more</a>
+            <a class="blog__link showmore-link" href="#">Show more</a>
           </div>
         </section>
       </main>
