--- a/app/newcars.html
+++ b/app/newcars.html
@@ -53,7 +53,9 @@
             <h2 class="title title__h2 cars__title">Choose your car</h2>
             <div class="tabs">
               <div class="tabs__btn">
-                <button class="tabs__btn-item">Car and Minivan</button>
+                <button class="tabs__btn-item tabs__btn-item--active">
+                  Car and Minivan
+                </button>
                 <button class="tabs__btn-item">Trucks</button>
                 <button class="tabs__btn-item">Crossovers & SUVs</button>
                 <button class="tabs__btn-item">Electrified</button>
@@ -114,7 +116,7 @@
                   </div>
                 </div>
               </div>
-              <a class="blog__link showmore-link" href="#">Show more</a>
+              <a class="cars__link showmore-link" href="#">Show more</a>
             </div>
           </div>
         </section>
